# upgraded-fishstick-highstock

./: README.md
backend/: .env.example  .gitignore  debug_crawlers.py  mypy.ini  pyproject.toml
backend/app/: __init__.py  config.py  database.py  image_client.py  image_fetcher.py  main.py  models.py  msrp_lookup.py  rate_limiter.py  schemas.py  service.py  verification.py
backend/app/crawlers/: __init__.py  base.py  google_shopping.py  manager.py  sephora.py  upc_database.py
backend/image-service/: package-lock.json  package.json  server.js
ui/: index.html  package-lock.json  package.json
ui/src/: App.css  App.tsx  index.css
