[project]
name = "highstock-product-enrichment"
version = "1.0.0"
description = "Beauty product lookup tool with web crawling"
requires-python = ">=3.12"

dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "sqlalchemy[asyncio]==2.0.23",
    "asyncpg==0.29.0",
    "greenlet>=3.0.0",
    "httpx==0.25.2",
    "beautifulsoup4==4.12.2",
    "lxml==4.9.3",
    "python-dotenv==1.0.0",
]

[project.optional-dependencies]
dev = [
    "mypy==1.7.1",
    "types-beautifulsoup4==4.12.0.7",
]

[tool.mypy]
python_version = "3.12"
# ... mypy config here